[gd_scene load_steps=6 format=3 uid="uid://dml4fviedjarc"]

[ext_resource type="Script" path="res://gui.gd" id="1_22d8y"]
[ext_resource type="Theme" uid="uid://b5cjpjxj6fnt7" path="res://main_theme.tres" id="1_oyj60"]
[ext_resource type="Texture2D" uid="uid://b1ws3248fv7sp" path="res://sprites/sprites_v01/wallpapper_02.jpg" id="3_tdoyc"]
[ext_resource type="AudioStream" uid="uid://dujrdfowqqfqo" path="res://sound/bu-offensive-birds.mp3" id="4_g1kqb"]
[ext_resource type="AudioStream" uid="uid://bn0fl6e2cmvmx" path="res://sound/click_sound_1.mp3" id="5_lyrr6"]

[node name="GIU" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_oyj60")
script = ExtResource("1_22d8y")

[node name="CR_backgroung" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.360784, 0.360784, 0.360784, 1)

[node name="Texture_backgroung" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3_tdoyc")
stretch_mode = 6

[node name="MC_top" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.0
offset_top = 52.0
offset_right = 107.0
offset_bottom = 92.0
grow_horizontal = 2
metadata/_edit_layout_mode = 1

[node name="HBox" type="HBoxContainer" parent="MC_top"]
offset_right = 292.0
offset_bottom = 40.0
alignment = 1

[node name="L_score_text" type="Label" parent="MC_top/HBox"]
offset_top = 10.0
offset_right = 96.0
offset_bottom = 29.0
theme_override_font_sizes/font_size = 24
text = "$SCORE"

[node name="L_score_data" type="Label" parent="MC_top/HBox"]
unique_name_in_owner = true
offset_left = 100.0
offset_top = 10.0
offset_right = 196.0
offset_bottom = 29.0
theme_override_font_sizes/font_size = 24
text = "$SCORE"

[node name="MC_center" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="MC_center"]
offset_left = 167.0
offset_top = 479.0
offset_right = 553.0
offset_bottom = 801.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 80
alignment = 1

[node name="B_start" type="Button" parent="MC_center/VBox"]
offset_right = 386.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 48
text = "$START"

[node name="B_settings" type="Button" parent="MC_center/VBox"]
offset_top = 136.0
offset_right = 386.0
offset_bottom = 186.0
theme_override_font_sizes/font_size = 42
text = "$SETTINGS"

[node name="B_exit" type="Button" parent="MC_center/VBox"]
offset_top = 266.0
offset_right = 386.0
offset_bottom = 322.0
theme_override_font_sizes/font_size = 48
text = "$EXIT"

[node name="MC_bottom" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -40.0
offset_right = 92.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_custom_anchors = true

[node name="L_info" type="Label" parent="MC_bottom"]
offset_right = 184.0
offset_bottom = 12.0
text = "$INFO"
horizontal_alignment = 1

[node name="B_pause" type="Button" parent="MC_bottom"]
visible = false
offset_right = 184.0
offset_bottom = 12.0
theme_override_font_sizes/font_size = 32
text = "$PAUSE_GAME"

[node name="MC_pause_menu" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="MC_pause_menu"]
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0, 0, 0, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="MC_pause_menu"]
offset_left = 167.0
offset_top = 485.0
offset_right = 553.0
offset_bottom = 795.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 80
alignment = 1

[node name="B_resume" type="Button" parent="MC_pause_menu/VBoxContainer"]
offset_right = 368.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 48
text = "$RESUME"

[node name="B_settings" type="Button" parent="MC_pause_menu/VBoxContainer"]
offset_top = 60.0
offset_right = 386.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 42
text = "$SETTINGS"

[node name="B_gomenu" type="Button" parent="MC_pause_menu/VBoxContainer"]
offset_top = 136.0
offset_right = 368.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 36
text = "$MAIN_MENU"

[node name="MC_center_pointer" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Pos2D" type="Position2D" parent="MC_center_pointer"]
unique_name_in_owner = true

[node name="MC_options" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="ColorRect" type="ColorRect" parent="MC_options"]
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.247059, 0.239216, 0.25098, 1)

[node name="VBox" type="VBoxContainer" parent="MC_options"]
offset_left = 156.0
offset_top = 429.0
offset_right = 564.0
offset_bottom = 851.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40
alignment = 1

[node name="B_music" type="Button" parent="MC_options/VBox"]
unique_name_in_owner = true
offset_right = 408.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_font_sizes/font_size = 44
toggle_mode = true
text = "$MUSIC"
icon_alignment = 1

[node name="B_sound" type="Button" parent="MC_options/VBox"]
unique_name_in_owner = true
offset_top = 92.0
offset_right = 408.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_font_sizes/font_size = 44
toggle_mode = true
text = "$SOUND
"
icon_alignment = 1

[node name="Label" type="Label" parent="MC_options/VBox"]
offset_top = 184.0
offset_right = 408.0
offset_bottom = 193.0
theme_override_font_sizes/font_size = 18
text = "Experimental function"
horizontal_alignment = 1

[node name="B_smooth" type="Button" parent="MC_options/VBox"]
unique_name_in_owner = true
offset_top = 233.0
offset_right = 408.0
offset_bottom = 285.0
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_font_sizes/font_size = 44
toggle_mode = true
text = "$SMOOTH
"
icon_alignment = 1

[node name="Label2" type="Label" parent="MC_options/VBox"]
offset_top = 325.0
offset_right = 408.0
offset_bottom = 334.0

[node name="B_menu_hide" type="Button" parent="MC_options/VBox"]
offset_top = 374.0
offset_right = 408.0
offset_bottom = 422.0
theme_override_font_sizes/font_size = 40
text = "$MENU_BACK"

[node name="ASP_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_g1kqb")
volume_db = -6.0

[node name="ASP_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lyrr6")

[connection signal="pressed" from="MC_center/VBox/B_start" to="." method="_on_b_start_pressed"]
[connection signal="pressed" from="MC_center/VBox/B_settings" to="." method="_on_b_settings_pressed"]
[connection signal="pressed" from="MC_center/VBox/B_exit" to="." method="_on_b_exit_pressed"]
[connection signal="pressed" from="MC_bottom/B_pause" to="." method="_on_b_pause_pressed"]
[connection signal="pressed" from="MC_pause_menu/VBoxContainer/B_resume" to="." method="_on_b_resume_pressed"]
[connection signal="pressed" from="MC_pause_menu/VBoxContainer/B_settings" to="." method="_on_b_settings_pressed"]
[connection signal="pressed" from="MC_pause_menu/VBoxContainer/B_gomenu" to="." method="_on_b_gomenu_pressed"]
[connection signal="toggled" from="MC_options/VBox/B_music" to="." method="_on_b_music_toggled"]
[connection signal="toggled" from="MC_options/VBox/B_sound" to="." method="_on_b_sound_toggled"]
[connection signal="toggled" from="MC_options/VBox/B_smooth" to="." method="_on_b_smooth_toggled"]
[connection signal="pressed" from="MC_options/VBox/B_menu_hide" to="." method="_on_b_menu_hide_pressed"]
